--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
 
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet">
+    <link href="css/print.css" rel="stylesheet" media="print">
+    <link href="css/smartphones_portrait.css" rel="stylesheet" media="orientation:portrait">
+
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
@@ -69,4 +68,6 @@
       </footer>
     </div>
   </body>
+  <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
+  <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 </html>
